feat: (processm.services) handle ETL process pausing, enable XES log generation and refactor not working tests (#131)
Former-commit-id: f1be105992051d5be57d017b54002003b0fee4f8
