# processm.services/src/main/kotlin/processm/services/api/DataStoresApi.kt
@@ -293,7 +293,7 @@ fun Route.DataStoresApi() {
             dataStoreService.assertDataStoreBelongsToOrganization(pathParams.organizationId, pathParams.dataStoreId)
 
             val etlProcesses = dataStoreService.getEtlProcesses(pathParams.dataStoreId)
-                .mapToArray { AbstractEtlProcess(it.name, it.dataConnectorId, EtlProcessType.valueOf(it.processType.processTypeName), it.id) }
+                .mapToArray { AbstractEtlProcess(it.id, it.name, it.dataConnectorId, it.isActive, EtlProcessType.valueOf(it.processType.processTypeName)) }
 
             call.respond(HttpStatusCode.OK,
                 EtlProcessCollectionMessageBody(etlProcesses))
@@ -303,10 +303,13 @@ fun Route.DataStoresApi() {
             val principal = call.authentication.principal<ApiUser>()!!
             principal.ensureUserBelongsToOrganization(pathParams.organizationId)
             dataStoreService.assertDataStoreBelongsToOrganization(pathParams.organizationId, pathParams.dataStoreId)
-            dataStoreService.assertUserHasSufficientPermissionToDataStore(principal.userId, pathParams.dataStoreId, OrganizationRoleDto.Owner)
+            dataStoreService.assertUserHasSufficientPermissionToDataStore(principal.userId, pathParams.dataStoreId, OrganizationRoleDto.Owner, OrganizationRoleDto.Writer)
             val etlProcessData = call.receiveOrNull<EtlProcessMessageBody>()?.data
                 ?: throw ApiException("The provided ETL process definition cannot be parsed")
-            when (etlProcessData.type) {
+            if (etlProcessData.dataConnectorId == null) throw ApiException("A data connector reference is required")
+            if (etlProcessData.name.isNullOrBlank()) throw ApiException("A name for ETL process is required")
+
+            val etlProcessId = when (etlProcessData.type) {
                 EtlProcessType.automatic -> {
                     val relations = etlProcessData.caseNotion?.edges.orEmpty().map { edge ->
                         edge.sourceClassId to edge.targetClassId
@@ -317,7 +320,20 @@ fun Route.DataStoresApi() {
             }
 
             call.respond(HttpStatusCode.Created,
-                EtlProcessMessageBody(AbstractEtlProcess(etlProcessData.name, etlProcessData.dataConnectorId, etlProcessData.type, etlProcessData.id)))
+                EtlProcessMessageBody(AbstractEtlProcess(etlProcessId, etlProcessData.name, etlProcessData.dataConnectorId, type = etlProcessData.type)))
+        }
+
+        patch<Paths.EtlProcess> { pathParams ->
+            val principal = call.authentication.principal<ApiUser>()!!
+            principal.ensureUserBelongsToOrganization(pathParams.organizationId)
+            dataStoreService.assertDataStoreBelongsToOrganization(pathParams.organizationId, pathParams.dataStoreId)
+            dataStoreService.assertUserHasSufficientPermissionToDataStore(principal.userId, pathParams.dataStoreId, OrganizationRoleDto.Owner, OrganizationRoleDto.Writer)
+            val etlProcessData = call.receiveOrNull<EtlProcessMessageBody>()?.data
+                ?: throw ApiException("The provided ETL process definition cannot be parsed")
+            if (etlProcessData.isActive == null) throw ApiException("An activation status for ETL process is required")
+            dataStoreService.changeEtlProcessActivationState(pathParams.dataStoreId, pathParams.etlProcessId, etlProcessData.isActive)
+
+            call.respond(HttpStatusCode.NoContent)
         }
 
         delete<Paths.EtlProcess> { pathParams ->
@@ -326,6 +342,16 @@ fun Route.DataStoresApi() {
             dataStoreService.assertUserHasSufficientPermissionToDataStore(principal.userId, pathParams.dataStoreId, OrganizationRoleDto.Owner)
             dataStoreService.assertDataStoreBelongsToOrganization(pathParams.organizationId, pathParams.dataStoreId)
             dataStoreService.removeEtlProcess(pathParams.dataStoreId, pathParams.etlProcessId)
+
+            call.respond(HttpStatusCode.NoContent)
+        }
+
+        post<Paths.EtlProcessLog> { pathParams ->
+            val principal = call.authentication.principal<ApiUser>()!!
+            principal.ensureUserBelongsToOrganization(pathParams.organizationId)
+            dataStoreService.assertDataStoreBelongsToOrganization(pathParams.organizationId, pathParams.dataStoreId)
+            dataStoreService.assertUserHasSufficientPermissionToDataStore(principal.userId, pathParams.dataStoreId, OrganizationRoleDto.Owner, OrganizationRoleDto.Writer)
+            logsService.enqueueXesExtractionFromMetaModel(pathParams.dataStoreId, pathParams.etlProcessId)
 
             call.respond(HttpStatusCode.NoContent)
         }
