# processm.services/src/main/kotlin/processm/services/api/Paths.kt
@@ -204,6 +204,17 @@ object Paths {
     @Location("/organizations/{organizationId}/data-stores/{dataStoreId}/etl-processes/{etlProcessId}")
     class EtlProcess(val organizationId: UUID, val dataStoreId: UUID, val etlProcessId: UUID)
 
+
+    /**
+     * XES log obtained from ETL process specified by [etlProcessId] and assigned to [dataStoreId].
+     *
+     * @param organizationId Organization ID
+     * @param dataStoreId Data store ID
+     * @param etlProcessId Data connector ID
+     */
+    @Location("/organizations/{organizationId}/data-stores/{dataStoreId}/etl-processes/{etlProcessId}/logs")
+    class EtlProcessLog(val organizationId: UUID, val dataStoreId: UUID, val etlProcessId: UUID)
+
     /**
      * Get details about current user
      *
