# processm.services/src/main/resources/api-spec.yaml
@@ -624,11 +624,69 @@ paths:
         schema:
           type: string
           format: uuid
+    patch:
+      tags:
+        - dataStores
+      summary: Update the specified ETL process
+      operationId: Update EtlProcess
+      requestBody:
+        description: ETL process details
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/EtlProcessMessageBody'
+        required: true
+      responses:
+        '204':
+          description: Successful operation
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+      security:
+        - bearerAuth: []
     delete:
       tags:
         - dataStores
       summary: Remove the specified ETL process
       operationId: deleteEtlProcess
+      responses:
+        '204':
+          description: Successful operation
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+      security:
+        - bearerAuth: []
+  /organizations/{organizationId}/data-stores/{dataStoreId}/etl-processes/{etlProcessId}/logs:
+    parameters:
+      - name: organizationId
+        in: path
+        description: Organization ID
+        required: true
+        schema:
+          type: string
+          format: uuid
+      - name: dataStoreId
+        in: path
+        description: Data store ID
+        required: true
+        schema:
+          type: string
+          format: uuid
+      - name: etlProcessId
+        in: path
+        description: ETL process ID
+        required: true
+        schema:
+          type: string
+          format: uuid
+    post:
+      tags:
+        - dataStores
+      summary: Recreate XES log based on data acquired using the ETL process
+      operationId: RecreateLogFromEtlProcess
       responses:
         '204':
           description: Successful operation
@@ -1757,7 +1815,6 @@ components:
               $ref: '#/components/schemas/CaseNotion'
     EtlProcess:
       type: object
-      required: [name, type, dataConnectorId]
       properties:
         id:
           type: string
@@ -1767,6 +1824,8 @@ components:
         dataConnectorId:
           type: string
           format: uuid
+        isActive:
+          type: boolean
         type:
           $ref: '#/components/schemas/EtlProcessType'
     EtlProcessMessageBody:
