# processm.webui/src/main/frontend-app/src/models/EtlProcess.ts
@@ -3,6 +3,7 @@ export default interface EtlProcess {
   name: string;
   type: EtlProcessType;
   dataConnectorId: string;
+  isActive: boolean;
 }
 
 export enum EtlProcessType {
